Change scanning method&optimize code
Former-commit-id: 3a409dea45bb1f549b30f23038fdf137d4792b75